View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0033073 | Open CASCADE | OCCT:Coding | public | 2022-07-22 09:51 | 2022-10-19 15:56 |
Reporter | kgv | Assigned To | vpozdyayev | ||
Priority | normal | Severity | tweak | ||
Status | verified | Resolution | fixed | ||
Product Version | 7.7.0 | ||||
Target Version | 7.7.0 | ||||
Summary | 0033073: Coding Rules, RWGltf_CafWriter - suppress CLang warning coming from Draco library | ||||
Description | The following compiler warnings (CLang from Emscripten SDK) should be suppressed:In file included from C:\occt.git\src\RWGltf\RWGltf_CafWriter.cxx:48: In file included from c:/draco-1.4.1-wasm32/include\draco/compression/encode.h:19: In file included from c:/draco-1.4.1-wasm32/include\draco/compression/config/encoder_options.h:18: In file included from c:/draco-1.4.1-wasm32/include\draco/attributes/geometry_attribute.h:22: c:/draco-1.4.1-wasm32/include\draco/core/data_buffer.h:61:42: warning: implicit conversion loses integer precision: 'int64_t' (aka 'long long') to 'size_t' (aka 'unsigned long') [-Wshorten-64-to-32] src_buf->data() + src_offset, size); ^~~~ In file included from C:\occt.git\src\RWGltf\RWGltf_CafWriter.cxx:48: In file included from c:/draco-1.4.1-wasm32/include\draco/compression/encode.h:19: In file included from c:/draco-1.4.1-wasm32/include\draco/compression/config/encoder_options.h:18: In file included from c:/draco-1.4.1-wasm32/include\draco/attributes/geometry_attribute.h:21: In file included from c:/draco-1.4.1-wasm32/include\draco/attributes/geometry_indices.h:22: c:/draco-1.4.1-wasm32/include\draco/core/draco_index_type.h:150:25: warning: definition of implicit copy constructor for 'IndexType<unsigned int, draco::AttributeValueIndex_tag_type_>' is deprecated because it has a user-provided copy assignment operator [-Wdeprecated-copy-with-user-provided-copy] inline ThisIndexType &operator=(const ThisIndexType &i) { ^ c:/draco-1.4.1-wasm32/include\draco/attributes/geometry_attribute.h:107:41: note: in implicit copy constructor for 'draco::IndexType<unsigned int, draco::AttributeValueIndex_tag_type_>' first required here const int64_t byte_pos = GetBytePos(att_index); ^ c:/draco-1.4.1-wasm32/include\draco/attributes/geometry_attribute.h:122:39: warning: implicit conversion loses integer precision: 'const int64_t' (aka 'const long long') to 'size_t' (aka 'unsigned long') [-Wshorten-64-to-32] buffer_->Read(byte_pos, out_data, byte_stride_); ~~~~ ^~~~~~~~~~~~ c:/draco-1.4.1-wasm32/include\draco/attributes/geometry_attribute.h:129:37: warning: implicit conversion loses integer precision: 'int64_t' (aka 'long long') to 'size_t' (aka 'unsigned long') [-Wshorten-64-to-32] buffer_->Write(byte_pos, value, byte_stride()); ~~~~~ ^~~~~~~~~~~~~ In file included from C:\occt.git\src\RWGltf\RWGltf_CafWriter.cxx:48: In file included from c:/draco-1.4.1-wasm32/include\draco/compression/encode.h:19: In file included from c:/draco-1.4.1-wasm32/include\draco/compression/config/encoder_options.h:18: In file included from c:/draco-1.4.1-wasm32/include\draco/attributes/geometry_attribute.h:21: In file included from c:/draco-1.4.1-wasm32/include\draco/attributes/geometry_indices.h:22: c:/draco-1.4.1-wasm32/include\draco/core/draco_index_type.h:150:25: warning: definition of implicit copy constructor for 'IndexType<unsigned int, draco::PointIndex_tag_type_>' is deprecated because it has a user-provided copy assignment operator [-Wdeprecated-copy-with-user-provided-copy] inline ThisIndexType &operator=(const ThisIndexType &i) { ^ c:/draco-1.4.1-wasm32/include\draco/attributes/point_attribute.h:72:36: note: in implicit copy constructor for 'draco::IndexType<unsigned int, draco::PointIndex_tag_type_>' first required here return GetAddress(mapped_index(point_index)); ^ In file included from C:\occt.git\src\RWGltf\RWGltf_CafWriter.cxx:48: In file included from c:/draco-1.4.1-wasm32/include\draco/compression/encode.h:19: In file included from c:/draco-1.4.1-wasm32/include\draco/compression/config/encoder_options.h:18: In file included from c:/draco-1.4.1-wasm32/include\draco/attributes/geometry_attribute.h:21: In file included from c:/draco-1.4.1-wasm32/include\draco/attributes/geometry_indices.h:22: c:/draco-1.4.1-wasm32/include\draco/core/draco_index_type.h:150:25: warning: definition of implicit copy constructor for 'IndexType<unsigned int, draco::FaceIndex_tag_type_>' is deprecated because it has a user-provided copy assignment operator [-Wdeprecated-copy-with-user-provided-copy] inline ThisIndexType &operator=(const ThisIndexType &i) { ^ c:/draco-1.4.1-wasm32/include\draco/mesh/mesh.h:99:23: note: in implicit copy constructor for 'draco::IndexType<unsigned int, draco::FaceIndex_tag_type_>' first required here return this->face(FaceIndex(ci / 3))[ci % 3]; ^ 6 warnings generated. | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | N/A | ||||
|
Branch CR33073 has been created by kgv. SHA-1: 0e15cb30a18f1b63f1656ca6f4a841c4671e622b Detailed log of new commits: Author: kgv Date: Fri Jul 22 09:53:33 2022 +0300 0033073: Coding Rules, RWGltf_CafWriter - suppress CLang warning coming from Draco library |
|
Please raise the fix - OCCT: branch CR33073. |
|
Combination - OCCT branch : IR-2022-07-22 master SHA - changes and them, and you can discard any commits you make in this cb8519be19a3533b741f016d703119320de72ea6 changes and them, and you can discard any commits you make in this e0ceb716c70188b98130b1550914140d0502a6f9 Products branch : IR-2022-07-22 SHA - 7d10377b57d1c1ddf69852bf5b4e764f581c282f was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 18704.32000000071 / 18688.950000000597 [+0.08%] Products Total CPU difference: 11922.590000000118 / 11921.05000000012 [+0.01%] Windows-64-VC14: OCCT Total CPU difference: 20723.546875 / 20746.84375 [-0.11%] Products Total CPU difference: 13486.40625 / 13479.375 [+0.05%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR33073 has been deleted by mnt. SHA-1: 0e15cb30a18f1b63f1656ca6f4a841c4671e622b |
Date Modified | Username | Field | Change |
---|---|---|---|
2022-07-22 09:51 | kgv | New Issue | |
2022-07-22 09:51 | kgv | Assigned To | => kgv |
2022-07-22 09:53 | git | Note Added: 0109932 | |
2022-07-22 09:55 | kgv | Relationship added | related to 0032536 |
2022-07-22 09:55 | kgv | Assigned To | kgv => bugmaster |
2022-07-22 09:55 | kgv | Severity | minor => tweak |
2022-07-22 09:55 | kgv | Status | new => resolved |
2022-07-22 09:55 | kgv | Test case number | => N/A |
2022-07-22 09:55 | kgv | Note Added: 0109933 | |
2022-07-22 09:55 | kgv | Status | resolved => reviewed |
2022-07-23 14:12 | smoskvin | Status | reviewed => tested |
2022-07-23 14:12 | smoskvin | Note Added: 0109960 | |
2022-07-23 15:29 | smoskvin | Changeset attached | => occt master 617a2905 |
2022-07-23 15:29 | kgv | Assigned To | bugmaster => kgv |
2022-07-23 15:29 | kgv | Status | tested => verified |
2022-07-23 15:29 | kgv | Resolution | open => fixed |
2022-07-23 15:38 | git | Note Added: 0109968 | |
2022-10-19 15:56 | smoskvin | Assigned To | kgv => vpozdyayev |