0033073: Coding Rules, RWGltf_CafWriter - suppress CLang warning coming from Draco library